--- a/eas.json
+++ b/eas.json
@@ -1,32 +1,40 @@
 {
-    "cli": {
-      "version": ">= 16.3.3",
-      "appVersionSource": "remote"
+  "cli": {
+    "version": ">= 16.3.3",
+    "appVersionSource": "remote"
+  },
+  "build": {
+    "release": {
+      "distribution": "store"
     },
-    "build": {
-      "release": {
-        "distribution": "store"
-      },
-      "preview": {
-        "android": {
-          "buildType": "apk"
-        }
-      },
-      "preview2": {
-        "android": {
-          "gradleCommand": ":app:assembleRelease"
-        }
-      },
-      "preview3": {
-        "developmentClient": true
-      },
-      "preview4": {
-        "distribution": "internal"
-      },
-      "production": {}
+    "preview": {
+      "android": {
+        "buildType": "apk"
+      }
     },
-    "submit": {
-      "production": {}
+    "preview2": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease"
+      }
+    },
+    "preview3": {
+      "developmentClient": true
+    },
+    "preview4": {
+      "distribution": "internal"
+    },
+    "production": {
+      "env": {
+        "API_URL": "https://eat.r-e.kr/api/"
+      }
+    },
+    "development": {
+      "env": {
+        "API_URL": "https://eat.r-e.kr/api/"
+      }
     }
+  },
+  "submit": {
+    "production": {}
   }
-  
+}
